--- a/Astronomía_celeste.html
+++ b/Astronomía_celeste.html
@@ -68,7 +68,7 @@
             <p style="font-size: medium;">Acimut:<p style="font-size: medium; font-weight: normal;">"Indica la posición de un objeto a 
                 lo largo del horizonte." (Vito Technology, Inc., 2024)</p></p>
                 
-            <img src="imagenes/2025-10-24_3-07-09.jpg" height="250px">
+            <img src="imagenes/2025-10-24_3-07-09.jpg" height="250px" style="margin-left: -100px;">
             <div class="dibujo"></div>
             <div class="dibujo2"></div>
             <div class="espaciado"></div>
@@ -139,3 +139,4 @@
     </script>
 
 </body>
+
